name:                hw1-haskell
version:             0.1.0.0
synopsis:            Starter code for cse130 homework/00-haskell
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Hw1

  -- other-extensions:
  build-depends:       array, base

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    hw1-haskell
  other-modules:    Common
